--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <body>
 
-    <div id="container">
+    <div class="container">
       <h1>Totally Trivial!</h1>
-      <div id="wrapper">
-        <div id="quiz">
-          <button id="start">BUTN</button>
+      <div class="wrapper">
+        <div class="quiz">
+          <button class="start">Play</button>
         </div>
       </div>
     </div>
