--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="Assets/JS/app.js"></script>
 
   </body>
 
